--- a/src/holo-wtf.webflow.css
+++ b/src/holo-wtf.webflow.css
@@ -572,6 +572,38 @@ p {
   padding: 15px 25px;
 }
 
+.mint-button {
+  padding: 20px 35px;
+  border-radius: 7px;
+  background-color: rgb(167, 247, 216);
+  -webkit-transition: background-color 500ms cubic-bezier(.23, 1, .32, 1);
+  transition: background-color 500ms cubic-bezier(.23, 1, .32, 1);
+  font-family: 'Clover Medium', sans-serif;
+  color: #02070c;
+  font-size: 18px;
+  line-height: 1.2;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  text-decoration: none;
+  animation-name: mint-button;
+  animation-duration: 2s;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
+}
+
+.mint-button:hover {
+  background-color: #fff;
+}
+
+@keyframes mint-button {
+  0% {box-shadow: 0px 0px 10px 1px rgb(167, 247, 216);}
+  /* 0%   {width: 230px; height: 85px;} */
+  /* 25%  {width: 100px;}
+  50%  {width: 169px;}
+  75%  {width: 65px;} */
+  100% {box-shadow: 0px 0px 10px 1px skyblue;}
+  /* 100%   {width: 250px; height: 90px;} */
+}
 /* Old buttons: */
 /* .x-button {
   padding: 20px 30px;
