Add public and private profile field components. Display address in public field copmonent

--- a/src/holo-wtf.webflow.css
+++ b/src/holo-wtf.webflow.css
@@ -810,6 +810,15 @@ p {
   color: #fdc094;
 }
 
+.h3.no-margin.dash:hover {
+  cursor: pointer;
+  color: #fdc094;
+}
+
+p.no-margin.small {
+  font-size: 12px;
+}
+
 .spacer-large {
   height: 75px;
 }
