--- a/src/holo-wtf.webflow.css
+++ b/src/holo-wtf.webflow.css
@@ -1,3 +1,6 @@
+.vouched canvas{
+  border: 2px solid white;
+}
 .fireworks-1 {
   /* Allow elements underneath to be hovered still */
   pointer-events: none; 
