--- a/src/holo-wtf.webflow.css
+++ b/src/holo-wtf.webflow.css
@@ -56,7 +56,7 @@ h1 {
   margin-top: 20px;
   margin-bottom: 10px;
   font-family: 'Clover Semibold', sans-serif;
-  font-size: 67px;
+  font-size: xx-large;
   line-height: 1.2;
   font-weight: 700;
 }
@@ -92,7 +92,7 @@ h5 {
   margin-top: 10px;
   margin-bottom: 10px;
   font-family: 'Clover Semibold', sans-serif;
-  font-size: 21px;
+  font-size: large;
   line-height: 1.2;
   font-weight: 700;
 }
