--- a/src/holo-wtf.webflow.css
+++ b/src/holo-wtf.webflow.css
@@ -100,7 +100,7 @@ h5 {
 p {
   margin-bottom: 10px;
   font-family: Montserrat, sans-serif;
-  font-size: 16px;
+  font-size: small;
   line-height: 1.5;
 }
 
