improved styling of fonts

--- a/src/holo-wtf.webflow.css
+++ b/src/holo-wtf.webflow.css
@@ -76,7 +76,7 @@ h2 {
   margin-top: 20px;
   margin-bottom: 10px;
   font-family: 'Clover Semibold', sans-serif;
-  font-size: 51px;
+  font-size: x-large;
   line-height: 1.2;
   font-weight: 700;
 }
