--- a/src/holo-wtf.webflow.css
+++ b/src/holo-wtf.webflow.css
@@ -1145,7 +1145,7 @@ p.no-margin.small {
 
 .social-icon {
   display: inline-block;
-  height: 32px;
+  height: 24px;
   padding-left: 0px;
 }
 
@@ -1155,6 +1155,7 @@ p.no-margin.small {
   display: -ms-flexbox;
   display: flex;
   width: 100%;
+  margin-top: 5%;
   margin-bottom: 5%;
   -webkit-box-pack: end;
   -webkit-justify-content: flex-end;
