--- a/src/holo-wtf.webflow.css
+++ b/src/holo-wtf.webflow.css
@@ -1258,18 +1258,15 @@ p.no-margin.small {
   display: flex;
 }
 
-.card-link {
-  margin-left: 10px;
+.in-text-link {
   -webkit-transition: all 500ms cubic-bezier(.23, 1, .32, 1);
   transition: all 500ms cubic-bezier(.23, 1, .32, 1);
-  font-family: Montserrat, sans-serif;
   color: #fdc094;
-  font-size: 16px;
   line-height: 1.5;
   text-decoration: none;
 }
 
-.card-link:hover {
+.in-text-link:hover {
   color: #fff;
   text-decoration: underline;
 }
