--- a/src/App.css
+++ b/src/App.css
@@ -254,3 +254,54 @@
   color: #efefef;
   cursor: pointer;
 }
+
+.toasty-bug-report-card-container {
+  position: fixed;
+  bottom: 2%;
+  right: 2%;
+  display: flex;
+  flex-direction: row;
+  max-width: 20vw;
+}
+
+.toasty-bug-report-card {
+  background-color: var(--dark-card-background);
+  color: #fff;
+  font-family: "Clover Regular";
+  padding: 20px;
+  border: 2px solid #0a0a16;
+  border-radius: 10px;
+  box-shadow: 0 0px 3px #fdc094;
+}
+
+.toasty-bug-report-card--hide {
+  border: 2px solid #0a0a16;
+  border-radius: 10px;
+  box-shadow: 0 0px 3px #5e72eb;
+}
+
+.toasty-bug-report-card-open-button {
+  /* x-button - modified */
+  padding: 20px 20px;
+  border-radius: 7px;
+  font-family: 'Clover Medium', sans-serif;
+  font-size: 18px;
+  line-height: 1.1;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  text-decoration: none;
+
+  /* x-button.secondary.outline - modified  */
+  margin-top: 0px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #fff;
+  background-color: #fff;
+  -webkit-transition: color 500ms cubic-bezier(.23, 1, .32, 1), background-color 500ms cubic-bezier(.23, 1, .32, 1);
+  transition: color 500ms cubic-bezier(.23, 1, .32, 1), background-color 500ms cubic-bezier(.23, 1, .32, 1);
+  color: #01010c;
+}
+
+.toasty-bug-report-card-open-button:hover {
+  background-color: #aaa;
+}
