--- a/src/App.css
+++ b/src/App.css
@@ -305,3 +305,29 @@
 .toasty-bug-report-card-open-button:hover {
   background-color: #aaa;
 }
+
+.banner-button {
+  /* x-button - modified */
+  line-height: 1.1;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  text-decoration: none;
+
+  /* x-button.secondary.outline - modified  */
+  margin-top: 0px;
+  border-style: solid;
+  border-width: 1px;
+  /* border-color: #fff; */
+  background-color: transparent;
+  -webkit-transition: color 500ms cubic-bezier(.23, 1, .32, 1), background-color 500ms cubic-bezier(.23, 1, .32, 1);
+  transition: color 500ms cubic-bezier(.23, 1, .32, 1), background-color 500ms cubic-bezier(.23, 1, .32, 1);
+  color: #01010c;
+
+  position: absolute;
+  top: 50%;
+  right: 2%;
+  transform: translateY(-50%);
+  font-size: 1.5rem;
+  padding: 10px;
+  border: none;
+}
