--- a/src/App.css
+++ b/src/App.css
@@ -331,3 +331,39 @@
   padding: 10px;
   border: none;
 }
+
+.export-private-info-button {
+  /* x-button - modified */
+  padding: 20px 20px;
+  border-radius: 7px;
+  font-family: 'Clover Medium', sans-serif;
+  font-size: 18px;
+  line-height: 1.1;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  text-decoration: none;
+
+  /* x-button.secondary.outline - modified  */
+  margin-top: 0px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #fff;
+  background-color: transparent;
+  -webkit-transition: color 500ms cubic-bezier(.23, 1, .32, 1), background-color 500ms cubic-bezier(.23, 1, .32, 1);
+  transition: color 500ms cubic-bezier(.23, 1, .32, 1), background-color 500ms cubic-bezier(.23, 1, .32, 1);
+  color: #fff;
+}
+.export-private-info-button:hover {
+  color: #01010c;
+  background-color: #fff;
+}
+.export-private-info-button.disabled {
+  color: #aaa;
+  border-color: #aaa;
+  background-color: transparent;
+}
+.export-private-info-button.disabled:hover {
+  cursor: not-allowed;
+  /* color: #01010c; */
+  /* background-color: #aaa; */
+}
