--- a/src/holo-wtf.webflow.css
+++ b/src/holo-wtf.webflow.css
@@ -1061,6 +1061,15 @@ p.no-margin.small {
   border-color: #ff9190;
 }
 
+.text-field.short-y {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.text-field.long-x {
+  min-width: 500px;
+}
+
 .PhoneInputInput {
   margin-right: 20px;
   margin-bottom: 0px;
@@ -1270,6 +1279,36 @@ p.no-margin.small {
   color: #fff;
   text-decoration: underline;
 }
+
+input[type="checkbox"].checkbox {
+  appearance: none;
+  -webkit-appearance: none;
+  width: 30px;
+  height: 30px;
+  background-color: #ffffff;
+  border: 2px solid #c7c7cc;
+  border-radius: 4px;
+  outline: none;
+  position: relative;
+  transition: all 0.2s ease-in-out;
+}
+
+input[type="checkbox"].checkbox:checked {
+  background-color: #5e72eb;
+  border-color: #5e72eb;
+}
+
+input[type="checkbox"].checkbox:checked::before {
+  content: "✓";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 20px;
+  color: #ffffff;
+  transition: all 0.2s ease-in-out;
+}
+
 
 .spacer-x-small {
   height: 15px;
