--- a/src/holo-wtf.webflow.css
+++ b/src/holo-wtf.webflow.css
@@ -1802,14 +1802,14 @@ p.no-margin.small {
 }
 
 @media screen and (max-width: 991px) {
-  .nav-wallet {
+  /* .nav-wallet {
     margin-right: auto;
     margin-left: auto;
     padding: 20px;
     border-style: none;
     border-radius: 10px;
     background-color: #0b0742;
-  }
+  } */
 
   .dash-display-text {
     font-size: 60px;
@@ -1884,13 +1884,13 @@ p.no-margin.small {
     background-color: #0e2433;
   }
 
-  .nav-link {
+  /* .nav-link {
     margin-bottom: 5px;
     border-radius: 10px;
     background-color: #0b0742;
     font-family: 'Clover Semibold', sans-serif;
     color: #fff;
-  }
+  } */
 
   .h1 {
     font-size: 60px;
