--- a/src/App.css
+++ b/src/App.css
@@ -367,3 +367,42 @@
   /* color: #01010c; */
   /* background-color: #aaa; */
 }
+
+.confirmation-modal-buttons {
+  display: flex;
+  justify-content: space-between;
+  width: 230px;
+  max-width: 100%;
+}
+
+.confirmation-modal-button-confirm {
+  margin-left: 10px;
+}
+
+.confirmation-modal-button-confirm,
+.confirmation-modal-button-cancel {
+  /* x-button - modified */
+  padding: 10px 30px;
+  border-radius: 7px;
+  font-family: 'Clover Medium', sans-serif;
+  font-size: 16px;
+  line-height: 1.1;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  text-decoration: none;
+
+  /* x-button.secondary.outline - modified  */
+  margin-top: 0px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #fff;
+  background-color: transparent;
+  -webkit-transition: color 500ms cubic-bezier(.23, 1, .32, 1), background-color 500ms cubic-bezier(.23, 1, .32, 1);
+  transition: color 500ms cubic-bezier(.23, 1, .32, 1), background-color 500ms cubic-bezier(.23, 1, .32, 1);
+  color: #fff;
+}
+.confirmation-modal-button-confirm:hover,
+.confirmation-modal-button-cancel:hover {
+  color: #01010c;
+  background-color: #fff;
+}
