--- a/src/App.css
+++ b/src/App.css
@@ -69,6 +69,11 @@
   border-radius: 3px;
 }
 
+.checklist {
+  font-family: Montserrat, sans-serif;
+  font-size: 18px;
+  text-align: left;
+}
 .verification-button {
   padding: 20px 35px;
   border-radius: 7px;
