--- a/src/holo-wtf.webflow.css
+++ b/src/holo-wtf.webflow.css
@@ -657,11 +657,33 @@ p {
   animation-direction: alternate;
   animation-iteration-count: infinite;
 }
+.glowy-grey-button {
+  padding: 20px 35px;
+  border-radius: 7px;
+  background-color: #48cbd9;
+  -webkit-transition: background-color 500ms cubic-bezier(.23, 1, .32, 1);
+  transition: background-color 500ms cubic-bezier(.23, 1, .32, 1);
+  font-family: 'Clover Medium', sans-serif;
+  color: #02070c;
+  font-size: 18px;
+  line-height: 1.2;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  text-decoration: none;
+  animation-name: glowy-grey-button;
+  animation-duration: 2s;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
+}
 .glowy-green-button:hover {
   background-color: #fff;
   cursor: pointer;
 }
 .glowy-red-button:hover {
+  background-color: #fff;
+  cursor: pointer;
+}
+.glowy-grey-button:hover {
   background-color: #fff;
   cursor: pointer;
 }
@@ -683,6 +705,16 @@ p {
   50%  {width: 169px;}
   75%  {width: 65px;} */
   100% {box-shadow: 0px 0px 10px 1px skyblue;}
+  /* 100%   {width: 250px; height: 90px;} */
+}
+
+@keyframes glowy-grey-button {
+  0% {box-shadow: 0px 0px 10px 1px rgb(236, 240, 241);}
+  /* 0%   {width: 230px; height: 85px;} */
+  /* 25%  {width: 100px;}
+  50%  {width: 169px;}
+  75%  {width: 65px;} */
+  100% {box-shadow: 0px 0px 10px 1px rgb(236, 240, 241);}
   /* 100%   {width: 250px; height: 90px;} */
 }
 
