--- a/src/App.css
+++ b/src/App.css
@@ -413,6 +413,37 @@
   /* background-color: #aaa; */
 }
 
+.backup-credentials-button {
+  /* x-button - modified */
+  padding: 20px 20px;
+  border-radius: 7px;
+  font-family: 'Clover Medium', sans-serif;
+  font-size: 18px;
+  line-height: 1.1;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  text-decoration: none;
+
+  /* x-button.secondary.outline - modified  */
+  margin-top: 0px;
+  border-style: solid;
+  border-width: 1px;
+  background-color: transparent;
+  -webkit-transition: color 500ms cubic-bezier(.23, 1, .32, 1), background-color 500ms cubic-bezier(.23, 1, .32, 1);
+  transition: color 500ms cubic-bezier(.23, 1, .32, 1), background-color 500ms cubic-bezier(.23, 1, .32, 1);
+  color: #fff;
+
+  background-color: var(--dark-card-background);
+  color: var(--dark-card-background);
+  border-color: var(--dark-card-background);
+
+}
+.backup-credentials-button:hover {
+  color: #01010c;
+  background-color: #fff;
+  display: block;
+}
+
 .confirmation-modal-buttons {
   display: flex;
   justify-content: space-between;
